# Guardian

./: .gitignore  CLAUDE.md  feature_list.json  pyproject.toml
.claude/agents/: implementer.md  leader.md  spec_author.md
docs/: architecture.md  conventions.md  specs.md
progress/: current.md  impl_api_response.md  impl_clone_path.md  impl_github_metadata_reader.md  impl_load_rules.md  impl_loader_application.md  impl_loader_domain.md  impl_loader_engine.md  impl_loader_github.md  impl_loader_node.md  impl_loader_tests.md  impl_prompt_builder.md  impl_server_entry_point.md  impl_tree_is_moddified_label.md  impl_workflow_start.md  review_prompt_builder.md  test_updates_clone_path.md
prompts/: architecture.md.j2  bussinees_rules.md.j2  checklist.md.j2
specs/clone_path/: design.md  requirements.md  tasks.md
specs/load_rules/: design.md  requirements.md  tasks.md
specs/loader_node/: design.md  requirements.md  tasks.md
specs/prompt_builder/: design.md  requirements.md  tasks.md
specs/refactor_clonepath/: design.md  requirements.md  tasks.md
specs/server_entry_point/: design.md  requirements.md  tasks.md
specs/tree_is_moddified_label/: design.md  requirements.md  tasks.md
specs/workflow_start/: design.md  requirements.md  tasks.md
src/application/clone/: clone_service.py  file_excluder.py  file_replacer.py  tree_builder.py
src/application/context/: query_builder.py  (+1 more)
tests/application/: test_clone_service.py  test_clone_service_specialized.py  test_file_excluder.py  test_file_replacer.py  test_tree_builder.py
tests/infra/: test_http_app.py
(+130 files in other folders)
