[project]
name = "cursor"
version = "0.1.0"
description = ""
authors = [
    {name = "Ru-kko",email = "verase2003.1@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "cursor-sdk (>=0.1.8,<0.2.0)",
    "langgraph (>=1.2.6,<2.0.0)",
    "openai (>=2.43.0,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "gitpython (>=3.1.50,<4.0.0)",
    "pathspec (>=1.1.1,<2.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "langchain-postgres (>=0.0.17,<0.0.18)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
